Modificacion de sliders y se agregó una seccion de galeria

--- a/pages/presidencia.html
+++ b/pages/presidencia.html
@@ -89,7 +89,7 @@
                                                 
                                                 <a class="dropdown-item" href="rehabilitacion.html" style="color:#000;"><FONT SIZE=1>Rehabilitación</FONT></a>
                                                 <a class="dropdown-item" href="inclusion.html" style="color:#000;"><FONT SIZE=1>Inclusión a la vida</FONT></a>
-                                                <a class="dropdown-item" href="cadi.html" style="color:#000;"><FONT SIZE=1>Servicio CADI</FONT></a>
+                                                <!--<a class="dropdown-item" href="cadi.html" style="color:#000;"><FONT SIZE=1>Servicio CADI</FONT></a>-->
                                               </div>
                                           </div>
                                     </li>
