Modificaciones en los mensajes

--- a/pages/direccion.html
+++ b/pages/direccion.html
@@ -154,7 +154,7 @@
                 <div class="row">
                         
                  <div class="title-box text-center">
-                    <h2 class="title">Directora</h2>
+                    <h2 class="title">Dirección General</h2>
                  </div>
                   
                  </div>
@@ -171,16 +171,15 @@
                      <br><br>
                     <div class="col-md-4">
                         <div style="text-align:justify;">
-                            <h3><b>Elva Leticia Suárez Vega</b></h3>
+                            <h3><b>Patricia Ortíz Becerra</b></h3>
                             <br>
-                            <h4>Presidenta del SMDIF</h4>
+                            <h4>Directora del SMDIF</h4>
                             <br>
                             <p>
-                                Los servicios del Sistema Municipal para el Desarrollo 
-                                Integral de la Familia de San Luis de la Paz se dirigen 
-                                a las 56 colonias y 604 comunidades que conforman el 
-                                municipio, beneficiando primordialmente a las personas 
-                                más vulnerables.
+                                Patricia Ortíz Becerra, Licenciada en Administración 
+                                de Empresas, es actualmente Directora General del 
+                                Sistema Municipal para el Desarrollo Integral de la 
+                                Familia de San Luis de la Paz Guanajuato.
                             </p>
                           </div>
                     </div>
